--- a/Semantic-Bird/CSS/style.css
+++ b/Semantic-Bird/CSS/style.css
@@ -9,10 +9,11 @@ body{
     background: #ecebeb;
     font-size: 16px;
     width: 100%;
-    height: 75px;
+    height: 8%;
     display: flex;
     align-items: center;
-    justify-content: space-between;    
+    justify-content: space-between;  
+    position: fixed;  
     
 }
 #header-self{
@@ -28,7 +29,8 @@ body{
 .page{    
     color: #fff;
     background-color: #1abc9c;   
-    height: 700px; 
+    height: 30%; 
+    padding-bottom: 55px;
 }
 .self{
     display: flex;
@@ -52,7 +54,7 @@ body{
     text-align: center;
     background-color: #474e5d;
     color: #fff;
-    height: 235px;
+    height: 30%;
 }
 
 .text-item{
@@ -63,30 +65,35 @@ body{
     height: 35px;
     border-radius: 10px;
     border: none;
+    margin-bottom: 20px;
 }
 .under{
-    padding-top: 40px;
+    
     text-align: center;
 }
 .under-page{
-    padding-top: 40px;
+    padding-top: 20px;
     display: flex;
     align-items: center;
     margin-bottom: 80px;
-    
-
+}
+.section-label{
+    padding-top: 20px;
+    text-align: center;
 }
 .setting-item{
     display: flex;
     align-items: center;
     flex-direction: column;
     font-size: 12px;
-    padding-right: 20px;
-    
+    padding-right: 20px;    
+    width: 15%;
+    margin: auto;
 }
+
 .set-image{
-    width: 250px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
 }
 .last-line{
     text-decoration: none;
